--- a/app/src/main/res/layout/fragment_groceries.xml
+++ b/app/src/main/res/layout/fragment_groceries.xml
@@ -5,61 +5,109 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroceriesFragment">
+    tools:context=".GroceriesFragment"
+    android:background="#FEFEFE">
 
-    <!-- reuse the bottom_bar for all the main sections -->
-    <include layout="@layout/bottom_bar"/>
+    <!-- Decorative background circles layered first -->
+    <View
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/green_faded_circle"
+        android:alpha="0.25"
+        android:translationX="-120dp"
+        android:translationY="-90dp"
+        android:clickable="false"
+        android:focusable="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/grocery_list_title_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="SPO"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/grocery_list_title_2"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-            android:id="@+id/grocery_list_title_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="!"
-            android:textColor="#00b215"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/grocery_list_title_1"
-            app:layout_constraintEnd_toStartOf="@+id/grocery_list_title_3"
-            app:layout_constraintStart_toEndOf="@id/grocery_list_title_1"/>
-        <TextView
-            android:id="@+id/grocery_list_title_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LER ALERT"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/grocery_list_title_1"
-            app:layout_constraintStart_toEndOf="@id/grocery_list_title_2"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <View
+        android:layout_width="800dp"
+        android:layout_height="800dp"
+        android:alpha="0.25"
+        android:background="@drawable/green_faded_circle"
+        android:translationX="-350dp"
+        android:translationY="400dp"
+        android:clickable="false"
+        android:focusable="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
+    <View
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:alpha="0.3"
+        android:background="@drawable/yellow_faded_circle"
+        android:translationX="-20dp"
+        android:translationY="70dp"
+        android:clickable="false"
+        android:focusable="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <!-- Title Text -->
+    <TextView
+        android:id="@+id/grocery_list_title_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="SPO"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/grocery_list_title_2"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/grocery_list_title_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="!"
+        android:textColor="#00b215"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/grocery_list_title_1"
+        app:layout_constraintEnd_toStartOf="@+id/grocery_list_title_3"
+        app:layout_constraintStart_toEndOf="@id/grocery_list_title_1"/>
+
+    <TextView
+        android:id="@+id/grocery_list_title_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LER ALERT"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/grocery_list_title_1"
+        app:layout_constraintStart_toEndOf="@id/grocery_list_title_2"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Sorting Dropdown -->
     <Spinner
         android:id="@+id/grocery_list_sorting_dropdown"
-        android:layout_marginTop="20dp"
-        android:layout_width="@dimen/input_width"
+        android:layout_width="200dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/rounded_square"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/grocery_list_title_1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/grocery_list_area"
         android:layout_width="match_parent"
-        android:layout_height="561dp"
-        android:contentDescription="Grocery List View"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="100dp"
+        app:layout_constraintTop_toBottomOf="@id/grocery_list_sorting_dropdown"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grocery_list_sorting_dropdown" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="Grocery List View"/>
 
+    <!-- Add Grocery Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_groceries_button"
         android:layout_width="wrap_content"
@@ -74,5 +122,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Bottom Navigation Bar -->
+    <include layout="@layout/bottom_bar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
