--- a/app/src/main/res/layout/grocery_item_appearance.xml
+++ b/app/src/main/res/layout/grocery_item_appearance.xml
@@ -8,14 +8,13 @@
 <!-- This is the xml file for the
 appearance of each item in the grocery list -->
 
-
     <TextView
         android:id="@+id/grocery_list_item"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:text="default_text"
+        android:layout_marginStart="10dp"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,7 @@ appearance of each item in the grocery list -->
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginEnd="55dp"
         android:textSize="18sp"
         android:text="default_days_left"
         android:textAlignment="center"
@@ -37,18 +36,22 @@ appearance of each item in the grocery list -->
             android:id="@+id/grocery_options"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginStart="400dp"
+            android:layout_marginEnd="-10dp"
             style="?android:attr/actionOverflowButtonStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Divider Line (only visible if not last item in adapter) -->
     <View
-        android:layout_width="match_parent"
+        android:id="@+id/divider"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
         android:background="#888888"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grocery_list_item"
         app:layout_constraintStart_toStartOf="parent"
-         />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
