--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -112,7 +112,7 @@
         android:layout_marginEnd="@dimen/label_text_size"
         android:padding="8dp"
         android:maxWidth="300dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:elevation="10dp"
         app:layout_constraintTop_toBottomOf="@id/header_container"
         app:layout_constraintEnd_toEndOf="@id/scroll_area"
