--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_groceriesFragment_to_statisticsFragment"
             app:destination="@id/statisticsFragment" />
+        <action
+            android:id="@+id/action_groceriesFragment_to_recentDetailFragment"
+            app:destination="@id/recentDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/addGroceryFragment"
@@ -62,4 +65,9 @@
             android:id="@+id/action_statisticsFragment_to_groceriesFragment"
             app:destination="@id/groceriesFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/recentDetailFragment"
+        android:name="edu.sjsu.sase.android.spoleralert.RecentDetailFragment"
+        android:label="Recent Details"
+        tools:layout="@layout/fragment_recent_detail" />
 </navigation>
