--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -18,13 +18,17 @@
         <ImageButton
             android:id="@+id/grocery_list_bottom_bar"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="8dp"
-            android:src="@android:drawable/ic_menu_search"
+            android:padding="4dp"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:src="@drawable/grocery_icon"
             android:contentDescription="List"
+            android:background="@drawable/rounded_square"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/recipes_bottom_bar"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,11 +37,15 @@
         <ImageButton
             android:id="@+id/recipes_bottom_bar"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@android:drawable/ic_menu_agenda"
+            android:padding="4dp"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:src="@drawable/recipe_icon"
             android:contentDescription="Groceries"
+            android:background="@drawable/rounded_square"
             app:layout_constraintStart_toEndOf="@id/grocery_list_bottom_bar"
             app:layout_constraintEnd_toStartOf="@id/statistics_bottom_bar"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,13 +54,17 @@
         <ImageButton
             android:id="@+id/statistics_bottom_bar"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:src="@android:drawable/star_big_on"
+            android:layout_marginEnd="20dp"
+            android:padding="4dp"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:src="@drawable/statistics_icon"
             android:contentDescription="Stats"
+            android:background="@drawable/rounded_square"
             app:layout_constraintStart_toEndOf="@id/recipes_bottom_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -60,33 +72,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/bottom_bar"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="85dp"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent">-->
-
-    <!--        <ImageButton-->
-    <!--            android:id="@+id/grocery_list_bottom_bar"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:contentDescription="Go to grocery list button"-->
-    <!--            android:src="@android:drawable/ic_menu_search"/>-->
-
-    <!--        <ImageButton-->
-    <!--            android:id="@+id/recipes_bottom_bar"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:contentDescription="Go to recipes page button"-->
-    <!--            android:src="@android:drawable/ic_menu_agenda"/>-->
-
-    <!--        <ImageButton-->
-    <!--            android:id="@+id/statistics_bottom_bar"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:contentDescription="Go to statistics page button"-->
-    <!--            android:src="@android:drawable/star_big_on"/>-->
-
-    <!--    </LinearLayout>-->
